test/cases/compile_errors/stage1/obj/direct_struct_loop.zig
const A = struct { a : A, };
export fn entry() usize { return @sizeOf(A); }

// error
// backend=stage1
// target=native
//
// tmp.zig:1:11: error: struct 'A' depends on itself
